# TemplateProject

./: CMakeLists.txt  README.md
include/TemplateProject/: main.h
src/: main.cpp
utilities/include/utilities/: lib.h
utilities/src/: lib.cpp
